--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ Your life bled into theirs: their customers paid for your product; their custome
 
 Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind&quot;) [expensive and sometimes debt-inducing] and your world was about to change. Your life had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
 
-Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata><tw-passagedata pid="2" name="ignore it" tags="" position="552,286" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
+Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata><tw-passagedata pid="2" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
 
 Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
 
-Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="340,264" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
+Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="3" name="slide right to answer" tags="" position="414,263" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
 
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
@@ -47,7 +47,7 @@ Your phone rings again. It must be an emergency. You [[slide right to answer]].<
 &quot;Can&#39;t. I&#39;m holding.&quot;
 
 
-You tell her that it&#39;s probably just X, your erstwhile boyfriend. Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="4" name="panic because of what happened the other week" tags="" position="443,383" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
+You tell her that it&#39;s probably just X, your erstwhile boyfriend. Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="4" name="panic because of what happened the other week" tags="" position="452,390" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
 
 
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
@@ -61,7 +61,7 @@ You&#39;re not jealous because his confusion and disorientation is obvious. X is
 You start to fear for your own safety. (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor. You&#39;re gyrating against hundreds of bodies all at once, texting scores of potential lovers, your flesh multiplied and embodied by every pulsing body in the venue. You are the hyper-sexual adulteress of his nightmares in every reality except the one you inhabit.
 
 
-This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="5" name="go to the bathroom" tags="" position="324,382" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
+This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="5" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
 
 
 A desperate scream from outside the bathroom door. &quot;My fiancé is in there!&quot;
@@ -111,7 +111,7 @@ Words etched in my neuropathways.
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
-(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata><tw-passagedata pid="8" name="having something stolen" tags="" position="584,150" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. I love her and Carmella immediately when they catch and call out the girl who rips an outfit off my rack and hides it away without payment. 
+(live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]</tw-passagedata><tw-passagedata pid="8" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. I love her and Carmella immediately when they catch and call out the girl who rips an outfit off my rack and hides it away without payment. 
 
 
 Karla buys Ed Hardy hoodies and dresses from me. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
@@ -129,7 +129,7 @@ You might ask, and this is a pertinant question, Why the fuck put yourself in da
 On this particular Sunday night, (click-append: &quot;night&quot;) [, now technically Monday morning] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of their unmolested, and it felt like a win at the time. You wonder if Jodi ended up giving D a booby prize in exchange for a pipe later.
 
 
-Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="9" name="call X" tags="" position="191,314" size="100,100">Just recently Jade asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. 
+Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="9" name="call X" tags="" position="276,264" size="100,100">Just recently Jade asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. 
 
 
 Who else would rock up at her house on a Friday night to offer chickenwire installation?
@@ -182,7 +182,7 @@ You must&#39;ve been blinded. (click-append: &quot;blinded&quot;) [by love, by s
 
 The next day... (click-append: &quot;The next day...&quot;) [ you insist he see his doctor, who doubles his anti-psychotic medication.] 
 
-You&#39;re hopeful that life will stabilise now. And it does. [[For two weeks.]]</tw-passagedata><tw-passagedata pid="13" name="For two weeks." tags="" position="265,737" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. Although he&#39;s working across town, he pops in unexpectedly, supposedly for a can of Coke. It would almost be funny, how winded he is after clearly racing up four flights of stairs, throwing open the front door without so much as a hello / a text / a knock. 
+You&#39;re hopeful that life will stabilise now. And it does. [[For two weeks.]]</tw-passagedata><tw-passagedata pid="13" name="For two weeks." tags="" position="402,615" size="100,100">Nearly two weeks after the suspicious flat tire, you notice X driving past your apartment multiple times each day. Although he&#39;s working across town, he pops in unexpectedly, supposedly for a can of Coke. It would almost be funny, how winded he is after clearly racing up four flights of stairs, throwing open the front door without so much as a hello / a text / a knock. 
 
 
 Except that it&#39;s not funny because he&#39;s looking in every room for a stowaway. An imaginary lover. His cuckhold.
@@ -197,7 +197,7 @@ He leaves without a Coke because there was no Coke in the fridge and it was neve
 He&#39;s doubled his antipsychotic meds on his own accord, not under doctor&#39;s supervision. 
 
 
-[[Peacetime is over.]]</tw-passagedata><tw-passagedata pid="14" name="Peacetime is over." tags="" position="265,860" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
+[[Peacetime is over.]]</tw-passagedata><tw-passagedata pid="14" name="Peacetime is over." tags="" position="539,615" size="100,100">All you want to do is get through each day, one day at a time, each day getting closer to your goals. You have a secret shop in your rental apartment laden wall-to-wall, floor-to-ceiling, with gorgeous little nothings, and you allow the dancers (click-replace: &quot;dancers&quot;) [glamour models] (click-replace: &quot;glamour models&quot;) [escorts] (click-append: &quot;escorts&quot;) [and their friends] (click-replace: &quot;friends&quot;) [kids] to come over to shop any time of day / night. First, you&#39;ll pay your debts, then you&#39;ll buy yourself options. (click-replace: &quot;options&quot;) [freedom] When girls come over, you make X leave because he scares them. (click-replace: &quot;scares&quot;) [says innappropriate things to]
 
 
 You are all objects to him.
@@ -227,7 +227,60 @@ It sounded an awful lot like jail. (click-append: &quot;jail&quot;) [, which is 
 But getting back to the [[chickenwire]]...
 
 
-</tw-passagedata><tw-passagedata pid="15" name="chickenwire" tags="" position="265,1010" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="15" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again. How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.
+
+
+Today X shows up at Jade&#39;s apartment with a roll of chickenwire.
+
+
+Today X reveals his identity over the intercom.
+
+
+Jade asks him to leave.
+
+
+He won&#39;t leave.
+
+
+Today, against her better judgment, Jade lets X in.
+
+
+X insists he has something urgent to tell her. A secret about you. (Click-replace: &quot;A secret about you&quot;) [Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret]
+
+
+She isn&#39;t fooled. Once more, she asks him to leave.
+
+
+He refuses.
+
+
+She calls you, panicked, afraid.
+
+
+&quot;He showed up and he won&#39;t leave,&quot; she says. &quot;Please come help.&quot;
+
+
+By now the chickenwire fencing installation is proceeding against all protestation. (click-append: &quot;protestation&quot;) [ because some men are conditioned to think that no means yes, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer (click-replace: &quot;persuer&quot;) [stalked]] As if women&#39;s desires and refusals are inconsequential. (click-replace: &quot;inconsequential&quot;) [meaningless]
+
+
+Chickenwire fencing, purposed to keep danger away, is now the cause of your detainment in a small apartment with a madman and his whimsy. (click-replace: &quot;whimsy&quot;) [stubborn resistance] (click-replace: &quot;stubborn resistance&quot;) [continued efforts at coercive control]
+
+
+You sit stone-faced in a lounge chair in Jade&#39;s living room, your side-eye trained on the minor construction project, making sure the nail gun isn&#39;t aimed at either of you. For hours.
+
+
+He has done his best to alienate you from one friend after another. It&#39;s a textbook tactic for any abuser. You wish you hadn&#39;t saved him the night he went into convulsions from taking too many drugs. The night of your engagement. You fantasise that he&#39;ll fall off the ladder and land in hospital, where he can&#39;t hurt you any more.
+
+
+Do you [[go back to your apartment with X]] that night or do you [[beg him to stay at his mum&#39;s house]] for awhile? 
+
+
+
+
+
+</tw-passagedata><tw-passagedata pid="16" name="go back to your apartment with X" tags="" position="587,759" size="100,100">If this were a game of survival, you&#39;d be in real trouble now. Can&#39;t you see that you need to get as much distance between you and X as possible?
+
+Apologies for bringing you here under false pretence. You navigated here under the illusion of choice, or perhaps a misguided hope of reconciliation, but the reality is that the stage is set for disaster. It&#39;s only a matter of time, so you better stave off chaos and [[beg him to stay at his mum&#39;s house]]. </tw-passagedata><tw-passagedata pid="17" name="beg him to stay at his mum&#39;s house" tags="" position="764,761" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
