--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
    font-size: 8vw;
    font-size: 8vmin;
    line-height: normal; 
-@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
-  font-family: zen-dots;
-  background-image:url("ENTER YOUR URL HERE");
-  background-size:cover; 
+  font-family: 'Zen Dots', cursive;
+   background-image:url("img/chickenwire.jpg");
+ background-size:cover;
+}
 
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
+
+
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
 
 Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
 
-Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="414,263" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
+Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
 
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
