change title font colour

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   font-size: 8vh;
    font-size: 8vw;
    font-size: 8vmin;
+  color: #000000;
+  letter-spacing: 1.1px; 
    line-height: normal; 
   font-family: 'Zen Dots', cursive;
    background-image:url("img/chickenwire.jpg");
@@ -21,6 +23,9 @@
 }
 
 
+tw-link { color: #808080; }
+
+.enchantment-link:hover, tw-link:hover { color: #FFFFFF; }
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
@@ -318,7 +323,9 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 * the so-called injured party
 * the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="21" name="Title Page" tags="title-page" position="265,125" size="100,100">
 
+
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
+
 
 </tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,127" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
