change font to permanent marker

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play The Chickenwire Incident.</tw-noscript></noscript></tw-story>
-<tw-storydata name="The Chickenwire Incident" startnode="21" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-passage[tags~="title-page"] { 
+<tw-storydata name="The Chickenwire Incident" startnode="21" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+tw-passage[tags~="title-page"] { 
+  font-family: 'Permanent Marker', cursive;
   text-align: center; 
   font-size: 8vh;
    font-size: 8vw;
@@ -17,11 +20,9 @@
   color: #000000;
   letter-spacing: 1.1px; 
    line-height: normal; 
-  font-family: 'Zen Dots', cursive;
    background-image:url("img/chickenwire.jpg");
  background-size:cover;
 }
-
 
 tw-link { color: #000000; }
 
