--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ You&#39;re not jealous because his confusion and disorientation is obvious. X is
 You start to fear for your own safety. (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor. You&#39;re gyrating against hundreds of bodies all at once, texting scores of potential lovers, your flesh multiplied and embodied by every pulsing body in the venue. You are the hyper-sexual adulteress of his nightmares in every reality except the one you inhabit.
 
 
-This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. </tw-passagedata><tw-passagedata pid="4" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
+This is bullshit. You should [[go to the bathroom]] to take a break from this insane convergence of dimensions. 
+
+</tw-passagedata><tw-passagedata pid="4" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. You walk past security into the bathroom and enter the first stall on your right, locking the door. You sit on the toilet and start to pee and then your heart sinks. You can hear a commotion outside and you know it&#39;s about you.
 
 
 A desperate scream from outside the bathroom door. &quot;My fiancé is in there!&quot;
@@ -329,6 +331,8 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 
 </tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,127" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
+
+&lt;img src: img/rack6.jpg&gt;
 
 In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
