image 1st passage

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ tw-passage[tags~="title-page"] {
  background-size:cover;
 }
 
-tw-link { color: #000000; }
 
-.enchantment-link:hover, tw-link:hover { color: #FFFFFF; }
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
@@ -332,7 +330,9 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 </tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,127" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
-&lt;img src: img/rack6.jpg&gt;
+&lt;/style&gt;
+&lt;img src:img/rack6.jpg&gt;
+&lt;/div&gt;
 
 In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
