--- a/index.html
+++ b/index.html
@@ -330,9 +330,7 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 </tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,127" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
-&lt;/style&gt;
-&lt;img src:img/rack6.jpg&gt;
-&lt;/div&gt;
+&lt;img src:&quot;img/rack6.jpg&quot;&gt;
 
 In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
