--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play The Chickenwire Incident.</tw-noscript></noscript></tw-story>
 <tw-storydata name="The Chickenwire Incident" startnode="21" creator="Twine" creator-version="2.3.13" ifid="B6A21DAE-0465-4B1C-887F-40A47926D4EC" zoom="1" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+
 tw-passage[tags~="title-page"] { 
   font-family: 'Permanent Marker', cursive;
   text-align: center; 
@@ -22,6 +24,14 @@ tw-passage[tags~="title-page"] {
    line-height: normal; 
    background-image:url("img/chickenwire.jpg");
  background-size:cover;
+}
+
+tw-story {
+  font-family: 'EB Garamond', serif;
+}
+  
+.passage-image {
+  width: 100%;
 }
 
 
@@ -330,11 +340,15 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 </tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,127" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
-&lt;img src:&quot;img/rack6.jpg&quot;&gt;
+&lt;img src:&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot;&gt;
 
 In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
+&lt;img class:&quot;passage-image&quot; src:&quot;img/party.png&quot; alt=&quot;party girls&quot;&gt;
+
 Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose, when to refuse would get you called a snitch. That is to say, you were an active participant. A consumer as much as a hawker of pretty things. As likely to keep a corset for yourself as you were to sell it. Which meant you had to sell more to buy more to wear more to sell more. 
+
+&lt;img src:&quot;img/party3.png&quot; alt=&quot;more party girls&quot;&gt;
 
 Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind&quot;) [expensive and sometimes debt-inducing] and your world was about to change. Your life had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
 
