--- a/index.html
+++ b/index.html
@@ -342,13 +342,16 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 &lt;/style&gt;
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
 &lt;/div&gt;
+&lt;/style&gt;
+&lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
+&lt;/div&gt;
 In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
-&lt;img src=&quot;img/party.png&quot; /&gt;
+&lt;img src=&quot;img/party.png&quot; alt=&quot;more party girls&quot; /&gt;
 
 Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose, when to refuse would get you called a snitch. That is to say, you were an active participant. A consumer as much as a hawker of pretty things. As likely to keep a corset for yourself as you were to sell it. Which meant you had to sell more to buy more to wear more to sell more. 
 
-&lt;img class=&quot;passage-image&quot; src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
+&lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
 
 Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind&quot;) [expensive and sometimes debt-inducing] and your world was about to change. Your life had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
 
