--- a/index.html
+++ b/index.html
@@ -345,17 +345,19 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 &lt;/style&gt;
 &lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
 &lt;/div&gt;
-In those days the money you earned was covered in sweat and cocaine. (Isn&#39;t all money, really?) Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
+In those days the money you earned was covered in sweat and cocaine. (click-append: &quot;sweat and cocaine.&quot;) [ (Isn&#39;t all money, really?)] Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
 &lt;img src=&quot;img/party.png&quot; alt=&quot;more party girls&quot; /&gt;
 
-Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose, when to refuse would get you called a snitch. That is to say, you were an active participant. A consumer as much as a hawker of pretty things. As likely to keep a corset for yourself as you were to sell it. Which meant you had to sell more to buy more to wear more to sell more. 
+Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose. (click-append: &quot;lined their nose&quot;) [, when to refuse would get you called a snitch] That is to say, you were an active participant. (click-replace: &quot;an active participant&quot;) [a consumer as much as a hawker of pretty things] (click-replace: &quot;a consumer as much as a hawker of pretty things&quot;) [as likely to keep a corset for yourself as you were to sell it] (click-append: &quot;as likely to keep a corset for yourself as you were to sell it&quot;) [. Which meant you had to sell more to buy more to wear more to sell more]
+
+&lt;img src=&quot;img/corsets.png&quot; alt=&quot;girls in corsets drinking champagne&quot; /&gt;
+
+Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world was about to change. Things had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
 
 &lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
 
-Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind&quot;) [expensive and sometimes debt-inducing] and your world was about to change. Your life had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
-
-Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata></tw-storydata>
+Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
