--- a/index.html
+++ b/index.html
@@ -38,35 +38,34 @@ tw-story {
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
 
+&lt;img src=&quot;img/bikinis.jpg&quot; alt=&quot;lots of sparkly bikinis&quot; /&gt;
 
 Most of the girls are honest (with you at least), but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
 
 
 Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
 
-
 &quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
 
+&lt;img src=&quot;img/rackclub.png&quot; alt=&quot;clothing rack at Goldfingers with sparkly outfits&quot; /&gt;
 
 &quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot;
 
-
 &quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared.&quot;
-
 
 &quot;Who is it?&quot;
 
-
 &quot;They won&#39;t say.&quot;
-
 
 &quot;Call the police.&quot;
 
-
 &quot;Can&#39;t. I&#39;m holding.&quot;
 
+&lt;img src=&quot;img/cocaine.jpg&quot; alt=&quot;phone with lines of cocaine on top&quot; /&gt;
 
-You tell her that it&#39;s probably just X, your erstwhile boyfriend. Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="3" name="panic because of what happened the other week" tags="" position="452,390" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
+You tell her that it&#39;s probably just X, your erstwhile boyfriend. 
+
+Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="3" name="panic because of what happened the other week" tags="" position="452,390" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
 
 
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
@@ -126,16 +125,21 @@ Words etched in your neuropathways.
 Karla buys Ed Hardy hoodies and dresses from me. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
 
 
-One night Jodi organises birthday party for one of her friends (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers]. Let&#39;s call him D. For Dickhead.
+One night Jodi organises a birthday party for one of her friends (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers]. Let&#39;s call him D. For Dickhead.
+
+&lt;img src=&quot;img/party2.png&quot; alt=&quot;party girls in limo&quot; /&gt;
+
+Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] bringing him girls he might like, or whom he might find easy, Karla is simply sport. D won&#39;t let us leave until we each have a drink. He&#39;s spiked them all with G, which Jodi loves and I hate. Karla is freaking out, but quietly. You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. 
+
+These are the kinds of guys who bolt the doors from the inside and then hide the keys.
 
 
-Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. With Jodi unofficially acting as his pimp, bringing him girls he might like, or whom he might find easy, Karla is simply sport. He won&#39;t let us leave until we each have a drink. He&#39;s spiked them all with G, which Jodi loves and I hate. Karla is freaking out, but quietly. You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. These are the kinds of guys who bolt the doors from the inside and then hide the keys.
+You might ask, and this is a pertinant question, Why the fuck put yourself in danger like that? It&#39;s partly to please Jodi. (Click-append: &quot;It&#39;s partly to please Jodi.&quot;  [But again: Why the fuck would you want a friend like that?] Also, Sunday nights are a gamble with high stakes. You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone or even how you&#39;ll get home.
 
-
-You might ask, and this is a pertinant question, Why the fuck put yourself in danger like that? It&#39;s partly to please Jodi. (But again: Why the fuck would you want a friend like that?) Also, Sunday nights are a gamble with high stakes. You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone or even how you&#39;ll get home.
-
+&lt;img src=&quot;img/melbourne.jpg&quot; alt=&quot;Melbourne at night&quot; /&gt;
 
 On this particular Sunday night, (click-append: &quot;night&quot;) [, now technically Monday morning] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of their unmolested, and it felt like a win at the time. You wonder if Jodi ended up giving D a booby prize in exchange for a pipe later.
+
 
 
 Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="7" name="call X" tags="" position="276,264" size="100,100">Just recently Jade asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. 
